# RTSPProxy

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  readme.txt
scripts/: config.ini  rtsp_proxy.service
